--- a/DonateUs.html
+++ b/DonateUs.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <style media="screen">
+      h1{
+        left: 7%;
+        position: relative;
+      }
+    </style>
     <meta charset="utf-8">
     <title>Donate Us</title>
   </head>
   <body>
     <h1>HUNGERBOWL</h1>
+    <img src="images/Vege.png" width="100px" padding="10px" position="relative" bottom="100px" top="100px">
   </body>
 </html>
