--- a/DonateUs.html
+++ b/DonateUs.html
@@ -4,14 +4,16 @@
     <style media="screen">
       h1{
         left: 7%;
-        position: relative;
+        position: absolute;
+        top: 5px;
+        font-family: arial;
       }
     </style>
     <meta charset="utf-8">
     <title>Donate Us</title>
   </head>
   <body>
+    <img src="images/Vege.png" width="100px" padding="10px" position="relative">
     <h1>HUNGERBOWL</h1>
-    <img src="images/Vege.png" width="100px" padding="10px" position="relative" bottom="100px" top="100px">
   </body>
 </html>
